# bookhub

./: .gitignore  Makefile
backend/: CMakeLists.txt
backend/include/: server.hpp
backend/include/handlers/: base.hpp  books.hpp  interface.hpp  users.hpp
backend/include/models/: book.hpp  user.hpp
backend/src/: main.cpp  server.cpp
backend/src/handlers/: base.cpp  books.cpp  users.cpp
frontend/my-react-app/: package-lock.json
frontend/my-react-app/public/: index.html
frontend/my-react-app/src/: App.js  index.css  index.js
frontend/my-react-app/src/components/Footer/: Footer.jsx
frontend/my-react-app/src/components/Header/: Header.css  Header.jsx
frontend/my-react-app/src/context/: LanguageContext.jsx
frontend/my-react-app/src/pages/About/: About.jsx
frontend/my-react-app/src/pages/Home/: Home.css  Home.jsx
frontend/my-react-app/src/pages/MyLibrary/: MyLibrary.jsx
frontend/my-react-app/src/pages/SignUp/: SignUp.jsx
frontend/my-react-app/src/translations/: translations.js
scripts/: setup.sh
